--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "koa-views": "^6.2.0",
     "koa2-cors": "^2.0.6",
     "mysql-pro": "^1.0.1",
+    "nodemailer": "^6.7.2",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pug": "^2.0.3"
   },
   "devDependencies": {
